syntax = "proto3";

package customer.v1;
option go_package = "github.com/yourorg/api-encomos/customer-service/proto/customer;customerpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// Customer Service
service CustomerService {
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
  
  // Vehicles (AutoParts)
  rpc ListVehicles(ListVehiclesRequest) returns (ListVehiclesResponse);
  rpc GetVehicle(GetVehicleRequest) returns (GetVehicleResponse);
  rpc CreateVehicle(CreateVehicleRequest) returns (CreateVehicleResponse);
  rpc UpdateVehicle(UpdateVehicleRequest) returns (UpdateVehicleResponse);
  rpc DeleteVehicle(DeleteVehicleRequest) returns (DeleteVehicleResponse);
  
  // Search
  rpc SearchCustomers(SearchCustomersRequest) returns (SearchCustomersResponse);
  
  // Customer History
  rpc GetCustomerHistory(GetCustomerHistoryRequest) returns (GetCustomerHistoryResponse);
  rpc AddCustomerNote(AddCustomerNoteRequest) returns (AddCustomerNoteResponse);
}

// Messages
message Customer {
  int64 id = 1;
  int64 tenant_id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  string customer_type = 7; // individual, business
  string company_name = 8;
  string tax_id = 9;
  string address = 10;
  google.protobuf.Timestamp birthday = 11;
  string notes = 12;
  google.protobuf.Struct preferences = 13;
  bool is_active = 14;
  repeated Vehicle vehicles = 15;
  repeated CustomerNote customer_notes = 16;
  CustomerStats stats = 17;
  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
}

message Vehicle {
  int64 id = 1;
  int64 customer_id = 2;
  string make = 3;
  string model = 4;
  int32 year = 5;
  string vin = 6;
  string license_plate = 7;
  string color = 8;
  string engine = 9;
  string notes = 10;
  bool is_active = 11;
  google.protobuf.Struct metadata = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message CustomerNote {
  int64 id = 1;
  int64 customer_id = 2;
  int64 staff_id = 3;
  string staff_name = 4;
  string note = 5;
  string type = 6; // general, service, complaint, compliment
  google.protobuf.Timestamp created_at = 7;
}

message CustomerStats {
  int32 total_orders = 1;
  double total_spent = 2;
  double average_order_value = 3;
  google.protobuf.Timestamp last_visit = 4;
  int32 visits_count = 5;
  string favorite_category = 6;
  repeated string favorite_products = 7;
}

// Customer Requests/Responses
message ListCustomersRequest {
  string search = 1;
  string customer_type = 2;
  bool active_only = 3;
  int32 page = 4;
  int32 limit = 5;
  string sort_by = 6; // name, created_at, last_visit, total_spent
  string sort_order = 7; // asc, desc
}

message ListCustomersResponse {
  repeated Customer customers = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

message GetCustomerRequest {
  int64 id = 1;
  bool include_vehicles = 2;
  bool include_notes = 3;
  bool include_stats = 4;
}

message GetCustomerResponse {
  Customer customer = 1;
}

message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string customer_type = 5;
  string company_name = 6;
  string tax_id = 7;
  string address = 8;
  google.protobuf.Timestamp birthday = 9;
  string notes = 10;
  google.protobuf.Struct preferences = 11;
  repeated CreateVehicleRequest vehicles = 12;
}

message CreateCustomerResponse {
  Customer customer = 1;
}

message UpdateCustomerRequest {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string customer_type = 6;
  string company_name = 7;
  string tax_id = 8;
  string address = 9;
  google.protobuf.Timestamp birthday = 10;
  string notes = 11;
  google.protobuf.Struct preferences = 12;
  bool is_active = 13;
}

message UpdateCustomerResponse {
  Customer customer = 1;
}

message DeleteCustomerRequest {
  int64 id = 1;
}

message DeleteCustomerResponse {
  bool success = 1;
}

// Vehicle Requests/Responses
message ListVehiclesRequest {
  int64 customer_id = 1;
  string search = 2;
  bool active_only = 3;
  int32 page = 4;
  int32 limit = 5;
}

message ListVehiclesResponse {
  repeated Vehicle vehicles = 1;
  int32 total = 2;
}

message GetVehicleRequest {
  int64 id = 1;
}

message GetVehicleResponse {
  Vehicle vehicle = 1;
}

message CreateVehicleRequest {
  int64 customer_id = 1;
  string make = 2;
  string model = 3;
  int32 year = 4;
  string vin = 5;
  string license_plate = 6;
  string color = 7;
  string engine = 8;
  string notes = 9;
  google.protobuf.Struct metadata = 10;
}

message CreateVehicleResponse {
  Vehicle vehicle = 1;
}

message UpdateVehicleRequest {
  int64 id = 1;
  string make = 2;
  string model = 3;
  int32 year = 4;
  string vin = 5;
  string license_plate = 6;
  string color = 7;
  string engine = 8;
  string notes = 9;
  bool is_active = 10;
  google.protobuf.Struct metadata = 11;
}

message UpdateVehicleResponse {
  Vehicle vehicle = 1;
}

message DeleteVehicleRequest {
  int64 id = 1;
}

message DeleteVehicleResponse {
  bool success = 1;
}

// Search Requests/Responses
message SearchCustomersRequest {
  string query = 1;
  string search_fields = 2; // name, email, phone, tax_id
  int32 limit = 3;
}

message SearchCustomersResponse {
  repeated Customer customers = 1;
  int32 total = 2;
}

// Customer History Requests/Responses
message GetCustomerHistoryRequest {
  int64 customer_id = 1;
  string type = 2; // orders, appointments, notes
  google.protobuf.Timestamp date_from = 3;
  google.protobuf.Timestamp date_to = 4;
  int32 page = 5;
  int32 limit = 6;
}

message CustomerHistoryItem {
  int64 id = 1;
  string type = 2; // order, appointment, note, payment
  string title = 3;
  string description = 4;
  double amount = 5;
  string status = 6;
  google.protobuf.Struct data = 7;
  google.protobuf.Timestamp created_at = 8;
}

message GetCustomerHistoryResponse {
  repeated CustomerHistoryItem items = 1;
  int32 total = 2;
}

message AddCustomerNoteRequest {
  int64 customer_id = 1;
  string note = 2;
  string type = 3;
}

message AddCustomerNoteResponse {
  CustomerNote note = 1;
}
